[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.12.0"
pest = "2"
pest_derive = { version = "2", features = ["grammar-extras"]}
anyhow = "1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day4"
harness = false